# all_battle

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
core/: Cargo.toml
core/src/: gen3.json  gen3.rs  lib.rs  models.rs  schema.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  gen_3.ts  gen_3_mons.ts  gen_3_moves.ts  gen_3_trainer_icon_map.ts  gen_3_trainers.ts  main.ts  messages.ts  utils.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AnimeMon.vue  BattleCard.vue  BattleCardHolder.vue  BattleCardPartyFocus.vue  BattleCardPartyFocusMon.vue  BattleCardStats.vue  BattleFilter.vue  BattleOrderBySelector.vue  BattlesPage.vue  CompletionCard.vue  FooterBar.vue  GameMap.vue  GemsCard.vue  LoadingCard.vue  MonFocus.vue  MonPartySelectorRow.vue  MonRank.vue  MonRankLocalFilterSelector.vue  MonRankOrderBy.vue  MonStatsCard.vue  MoveListSelectorRow.vue  NavBar.vue  RouteStepNode.vue  RouteStepOpponent.vue  SeriesSelector.vue  SeriesViewSelector.vue  TrainerCard.vue  TrainerFilterSelector.vue  TrainerFocus.vue  TrainerGameProgress.vue  TrainerGameProgressOverview.vue  TrainerMonsFocus.vue  TrainerRankFilterSelector.vue  TrainerRankOrderBy.vue  (+3 more)
migrations/2024-06-30-021314_matchup/: down.sql  up.sql
migrations/2024-10-29-112024_series_battle_index/: down.sql  up.sql
run/: Cargo.toml
run/src/: main.rs  options.rs
web/: Cargo.toml
web/src/: frontend.rs  lib.rs  progress.rs
web/src/api/: battle.rs  mod.rs  mon.rs  series.rs  trainer.rs
(+7 files in other folders)
