[package]
name = "all-battle-web"
version = "0.1.0"
edition = "2021"

[dependencies]
all-battle-core = { path = "../core/" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.118"
diesel = { version = "2.2.1", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
lazy_static = "1.5.0"
actix-web = "4.8.0"
actix-files = "0.6.6"
moka = { version = "0.12.7", features = ["sync"] }
log = "0.4.22"
md5 = "0.7.0"
chrono = "0.4.38"
